# Alex-fin-ai

./: .env.example  .gitignore  CLAUDE.md  README.md
apps/api/: Dockerfile  Dockerfile.worker  http_handler.py  main.py  planner_entry.py  pyproject.toml  requirements-lambda.txt
apps/api/core/: __init__.py  auth.py  config.py  observability.py  responses.py  route_errors.py
apps/api/routes/: __init__.py  accounts.py  analysis.py  debug.py  portfolio.py  user.py
apps/api/services/: __init__.py  account_portfolio_summary.py  aws.py  onboarding.py  openrouter_client.py  polygon_quote.py  portfolio_snapshot.py  startup_checks.py  supabase_client.py  user_bootstrap.py
apps/api/tests/: test_portfolio_positions.py
apps/api/workers/: __init__.py  sqs_worker.py
backend/: check_db.py  pyproject.toml
backend/alex_llm/: pyproject.toml
backend/alex_llm/src/alex_llm/: __init__.py  embeddings.py  lambda_observability.py  llm.py  openrouter_resilience.py  tracing.py
backend/charter/: agent.py  chart_contract.py  lambda_handler.py  pyproject.toml
backend/database/: pyproject.toml
backend/database/migrations/: 001_initial_schema.sql  README.md
backend/database/src/: __init__.py  migrations.py  models.py
backend/database/src/repositories/: __init__.py  _client.py  _serialize.py  account_repository.py  embedding_repository.py  instrument_repository.py  job_repository.py  position_repository.py  user_repository.py
backend/database/tests/: test_position_repository_upsert.py
backend/planner/: agent.py  child_agent_dispatch.py  lambda_handler.py  market.py  observability.py  prices.py  pyproject.toml  templates.py
backend/reporter/: agent.py  judge.py  lambda_handler.py  pyproject.toml
backend/researcher/: server.py  test_research.py
backend/retirement/: agent.py  lambda_handler.py  pyproject.toml
backend/tagger/: agent.py  lambda_handler.py  pyproject.toml  templates.py
backend/tests/: conftest.py  test_llm_router.py
frontend/: .env.example  (+2 more)
(+157 files in other folders)
