[project]
name = "alex-llm"
version = "0.1.0"
description = "OpenRouter LLM + embedding helpers for Alex agents"
requires-python = ">=3.12"
dependencies = [
    "openai-agents[litellm]>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alex_llm"]
