[project]
name = "alex-database"
version = "0.1.0"
description = "Database package for Alex Financial Planner (Supabase)"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "supabase>=2.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
